pulumi/baltic-sea/yaml/ingress/apologie.yaml
---

apiVersion:               traefik.containo.us/v1alpha1
kind:                     IngressRoute
metadata:
  name:                   apologie-ingressroute
spec:
  entryPoints:
                          - web
  routes:
    - match:              Host(`apologie.the-independent-friend.de`)
      kind:               Rule
      services:
        - name:           apologie
          port:           80
      middlewares:
        - name:           apologie
    # - match:              Host(`apologie.the-independent-friend.de`) && PathPrefix(`/`)
    #   kind:               Rule
    #   services:
    #     - name:           apologie
    #       port:           80
    #   middlewares:
    #     - name:           apologie

---

apiVersion:               traefik.containo.us/v1alpha1
kind:                     IngressRoute
metadata:
  name:                   https-apologie-ingressroute
spec:
  entryPoints:
                          - websecure
  routes:
    # - match:              Host(`https://apologie.the-independent-friend.de`) && PathPrefix(`/`)
    - match:              Host(`apologie.the-independent-friend.de`)
      kind:               Rule
      services:
        - name:           apologie
          port:           80
  tls:
    secretName:           apologie

---

apiVersion:               traefik.containo.us/v1alpha1
kind:                     Middleware
metadata:
  name:                   apologie
spec:
  redirectScheme:
    scheme:               https
    permanent:            true
