pulumi/baltic-sea/yaml/ingress/quaker-kr-de.yaml
---

apiVersion:               traefik.containo.us/v1alpha1
kind:                     IngressRoute
metadata:
  name:                   quaker-kr-de-ingressroute
spec:
  entryPoints:
                          - web
  routes:
    - match:              Host(`test.quaker-kr.de`)
      kind:               Rule
      services:
        - name:           quaker-kr-de
          port:           80
      middlewares:
        - name:           quaker-kr-de
    # - match:              Host(`test.quaker-kr.de`) && PathPrefix(`/`)
    #   kind:               Rule
    #   services:
    #     - name:           quaker-kr-de
    #       port:           80
    #   middlewares:
    #     - name:           quaker-kr-de

---

apiVersion:               traefik.containo.us/v1alpha1
kind:                     IngressRoute
metadata:
  name:                   https-quaker-kr-de-ingressroute
spec:
  entryPoints:
                          - websecure
  routes:
    # - match:              Host(`quaker-kr.de`) && PathPrefix(`/`)
    - match:              Host(`quaker-kr.de`)
      kind:               Rule
      services:
        - name:           quaker-kr-de
          port:           80
  tls:
    secretName:           quaker-kr-de

---

apiVersion:               traefik.containo.us/v1alpha1
kind:                     Middleware
metadata:
  name:                   quaker-kr-de
spec:
  redirectScheme:
    scheme:               https
    permanent:            true
