pulumi/baltic-sea/yaml/ingress/test-the-independent-friend-de.yaml
---

apiVersion:               traefik.containo.us/v1alpha1
kind:                     IngressRoute
metadata:
  name:                   tif-test-ingress-route
spec:
  entryPoints:
                          - web
                          - websecure
  routes:
    - match:              Host(`test.the-independent-friend.de`) && PathPrefix(`/`)
      kind:               Rule
      services:
        - name:           test-the-independent-friend-de
          port:           80
      middlewares:
        - name:           test-the-independent-friend-de
  tls:
    secretName:           test-the-independent-friend-de

---

apiVersion:               traefik.containo.us/v1alpha1
kind:                     Middleware
metadata:
  name:                   test-the-independent-friend-de
spec:
  redirectScheme:
    scheme:               https
    permanent:            true
